# pofile-ts

./: .gitignore  .release-it.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RFC-pofile-ts-gettext-plurals.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pofile-ts-feedback.md  release-please-config.json  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
apps/docs/: .gitignore  package.json  react-router.config.ts  source.config.ts  vite.config.ts
apps/docs/app/: app.css  (+2 more)
benchmark/: .gitignore  generate-fixture.ts  package.json  run.ts  tsconfig.json
crates/pofile/: CHANGELOG.md  Cargo.toml  README.md
crates/pofile-node/: Cargo.toml
crates/pofile-node/src/: lib.rs
crates/pofile/examples/: catalog_runtime.rs  po_roundtrip.rs
crates/pofile/src/: catalog.rs  compile.rs  headers.rs  icu.rs  lib.rs  message_id.rs  plurals.rs  po.rs  references.rs
crates/pofile/tests/: catalog.rs  po.rs  references.rs
docs/: api.html  format.html  guide.html  index.html  migration.html  styles.css
docs/plans/: 2026-03-09-pofile-crate-release-readiness.md  2026-03-09-rust-core-api-audit.md  2026-03-09-rust-core-migration-design.md  (+2 more)
src/: Item.test.ts  Item.ts  PO.test.ts  PO.ts  catalog.test.ts  catalog.ts  constants.ts  headers.ts  index.ts  messageId.test.ts  messageId.ts  parser.test.ts  parser.ts  po.ts  references.ts  serialization.ts  types.ts  utils.ts
test/: comments.test.ts  headers.test.ts  parse-plural-forms.test.ts  parse.test.ts  write.test.ts
(+16 files in other folders)
