[package]
name = "pofile-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Internal Node.js bindings for the pofile Rust core."
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.4.0", default-features = false, features = ["napi9"] }
napi-derive = "3.3.0"
pofile = { path = "../pofile" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[build-dependencies]
napi-build = "2.3.0"
